# 25kawauchi

./: .gitignore  Dockerfile  README.md  pyproject.toml  trainer.py
experiment_results/3.3/: approximate_reconstruction_error.py
experiment_results/4.2/: compare_defect_position.py  compare_singular_value_and_instability.py  show_perturbation_figures.py
experiment_results/4.3/: compare_model.py
learner/: config.yaml  data.py  net.py  perturbation.py  score.py  train.py  utils.py  validate.py
